styles/style.css
/* ... */
@media (min-width:900px) {
    .learn-more {
        display: flex;
        align-items: baseline;
    }

    .learn-more--in-section {
        margin: 0;
    }

    .learn-more__title {
        margin: none;
        margin-block-end: 0;
    }

    .learn-more__btn-container {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        flex: 1;
    }

    .learn-more__btn {
        margin: 0.3125em;
        padding: 0.625em 2.5em;
        font-family: -apple-system, Arial;
    }
}

/* modal */
.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: #9c9c9c80;
    z-index: 2;
}

@media (min-width: 900px) {
    .modal-overlay {
        position: absolute;
    }
}

.modal-overlay--hidden {
    display: none;
}

.modal {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    box-sizing: border-box;
    width: 93%;
    height: -moz-fit-content;
    height: fit-content;
    max-height: 95%;
    border: 4px solid #000;
    padding: 1em;
    background: #fff;
    overflow: auto;
}

@media (min-width: 900px) {
    .modal {
        width: 52%;
        max-width: 95vh;
        max-height: 97%;
        display: flex;
        flex-direction: column;
        overflow: initial;
    }
}

.modal--feedback {
    height: 100%;
}

.modal--hidden {
    display: none;
}

.modal__exit-btn {
    position: absolute;
    top: 1em;
    right: 1em;
    width: 1.25em;
    height: 1.25em;
    border: none;
    padding: 0;
    background: none;
}

@media (min-width: 900px) {
    .modal__exit-btn {
        display: none;
    }
}

.modal__exit-btn-icon {
    width: 100%;
    height: 100%;
    fill: #000;
}

.modal__content-container {
    flex: 1 1 auto;
    position: relative;
    overflow: auto;
}

.modal__header {
    margin-top: 7.6px;
    margin-top: calc(0.2em + 2px);
    line-height: 1;
    font-size: 1.75em;
}

.modal__toggle-narration-btn {
    position: absolute;
    top: 2px;
    right: 2px;
    box-sizing: border-box;
    width: 2.5em;
    height: 2.5em;
    border-radius: 100px;
    border: none;
    padding: 0.4em;
    background: none;
    transition: box-shadow 0.25s;
}

@media (min-width:900px) {

    .modal__toggle-narration-btn:hover {
        box-shadow: 0px 0px 0 2px #000;
    }
}

.modal__toggle-narration-btn--activated {
    box-shadow: 0px 0px 0 2px #000;
}

.modal__toggle-narration-btn-icon--hidden {
    display: none;    
}

.modal__toggle-narration-btn-show-icon {
    fill: none;
    stroke-width: 1;
    stroke: #000;
}

.modal__toggle-narration-btn-hide-icon {
    fill: #000;
}

.modal__text-content {
    line-height: 1.34em;
}

.modal__text-content a {
    color: #325c69;
    text-decoration: underline;
}

.modal__feedback-iframe {
    width: 100%;
    height: 100%;
}

/* vid-metadata */
.vid-metadata {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    background: #cccccc;
    padding: 0.5em;
    font-weight: 600;
    font-size: 0.85em;
    line-height: 1.2em;
}

.vid-metadata--in-section {
    flex: 0 0 auto;
    order: 1;
}

.vid-metadata--in-modal {
    flex: 0 0 auto;
    margin-bottom: 1em;
    box-shadow: 1px 0px 0 0px #444, 0px 1px 0 0px #444, -1px 0px 0 0px #444;
}

.vid-metadata__item {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: 0 3px;
    text-align: center;
}

.vid-metadata__key, .vid-metadata__text {
    color: #545454;
}

.vid-metadata__key {
    margin-right: 0.25em;
}

.vid-metadata__text {
    margin: 0 0.25em;
}

.vid-metadata__value {
    color: #325c69;
}

.vid-metadata__link {
    text-decoration: underline;
}

.vid-metadata__link--italicize {
    font-style: italic;
}

.vid-metadata__viewer-btn {
    box-sizing: border-box;
    height: 1.75em;
    width: 2.75em;
    margin: 1.5px 0 01.5px 0.8em;
    margin: 3px 0 01.5px 0.8em;
    transform: translateY(-0.1em);
    padding: 0;
    border: none;
    background-image: url(../img/viewerIcon.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-color: #fff0;
    cursor: pointer;
}

@media (min-width:900px) {
    .vid-metadata--in-section {
        order: initial;
    }

    .vid-metadata__viewer-btn {
        margin: 0 0 0 0.8em;
    }
}

/* protein-viewer */
.protein-viewer {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.protein-viewer__menu {
    position: absolute;
    display: flex;
    flex-direction: column;
    padding: 0.75em;
    background: #ffffffe6;
    border-radius: 0px 0px 10px 0px;
    font-size: 1rem;
    z-index: 2;
}

@media (min-width:480px) {
    .protein-viewer__menu {
        flex-direction: row;
    }
}

.protein-viewer__menu-label {
    color: #15404e;
    font-weight: 600;
    margin: 0.5em 0;
}

@media (min-width:480px) {
    .protein-viewer__menu-label {
        margin: 0 0.5em;
    }
}

.protein-viewer__menu-select {
    font-size: 1em;
}

.protein-viewer__atom-label {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    padding: 1em;
    width: fit-content;
    width: -moz-fit-content;
    background: #ffffff87;
    border-radius: 10px 10px 0 0;
    font-size: 1em;
    font-weight: 600;
    z-index: 2;
}

.protein-viewer__atom-label--hidden {
    display: none;
}

/* about-page-blurb */
.about-page-blurb {
    line-height: 1.34em;
}

/* fs-tree-confirm */
.fs-tree-confirm--fs-overlay {
    position: fixed;
    left: 0;
    top: 0;
    box-sizing: border-box;
    width: 100vw;
    height: 100vh;
    background: #9c9c9c80;
    z-index: 100;
}

.fs-tree-confirm--hidden {
    display: none;
}
/* ... */

